# SSCalc

./: .gitignore  CMakeLists.txt  Makefile  README.md  calc_ui.pro  configure  desktop_gen  libmaths.c  libmaths.cbp  libmaths.depend  libmaths.h  libmaths.layout  libmaths.pro  libmaths.so.1.0  libmaths.so.1.0.0  main.c  makefile  recursos.qrc  widget.cpp  widget.h  widget.ui
ejemplos/: boton.cpp  calculadora.cpp
lib/libcalc/documentacion/: reglas
lib/libcalc/src/: calc.c  calc.h  console.c  double_linked_lists.c  double_linked_lists.h  manejo_nodos.c  nodo.h  notacion.c  notacion.h
lib/libmaths/src/: maths.c  maths.h
lib/libvarious/: makefile
lib/libvarious/src/: std.c  std.h  strings.c  strings.h  various.c  various.h
libcalc/: README.md  libcalc.c  libcalc.h  makefile
libcalc/documentacion/: Algoritmos de traduccion de expresiones.htm  reglas
libcalc/inc/: infija_a_postfija.h
libcalc/src/: infija_a_postfija.c  manejo_nodos.c
libmaths/: README.md  debug.c  libmaths.c  makefile
libraries/libcalc/: makefile
libraries/libcalc/src/: calc.c  nodo.h  notacion.c  notacion.h
libraries/libmaths/: makefile
libraries/libvarious/src/: various.c
libs/: Makefile
libs/libcalc/: debug  makefile
libs/libcalc/src/: calc.c  calc.h  debug.c  infija_a_postfija.c  infija_a_postfija.h  libcalc.c  manejo_nodos.c  manejo_nodos.h  nodo.h  notacion.c  notacion.h
libs/libmaths/: makefile
libs/libmaths/src/: debug.c  libmaths.c  libmaths.h  maths.c  maths.h  test.c
libs/libstd/: makefile
libs/libstd/src/: std.c  std.h
libs/libstring/: makefile
libs/libstring/src/: my_string.c  my_string.h  string.c  string.h
libs/libvarious/: makefile
libs/libvarious/src/: std.c  strings.c  strings.h  various.c  various.h
resources/: desktop_gen  sscalc.gresource.xml  sscalc.ui
src/: callbacks.c  main.c  mainWindow.c  mainWindow.h  sscalc-gui.h  sscalc.ui  statusbar.c
